# python-ci-cd

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
.github/workflows/: base.yaml  build.yaml  bump.yaml  deploy.yaml
src/: app.py
test/: test_app.py
