[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minha_api"
version = "1.0.0"
description = "Uma API de teste"
authors = [{ name = "Matheus Delgado" }]
dependencies = [
    "Flask==3.0.3"
]

[project.optional-dependencies]
dev = [
    "pre-commit==3.8.0",
    "pytest-cov==5.0.0",
    "pytest==8.3.3",
    "flake8==7.1.1",
    "black==24.8.0",
    "mypy==1.11.2"
]

[tool.coverage.run]
include = ["src/app.py"]